--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -22,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:onClick="cancel"
         android:text="Cancel" />
 
     <EditText
@@ -40,6 +41,7 @@
         android:layout_below="@+id/etBody"
         android:ems="10"
         android:inputType="numberSigned"
+        android:text="140"
         android:textSize="14dp" />
 
     <TextView
