--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -10,7 +10,9 @@
         android:layout_height="50dp"
         app:srcCompat="@android:color/black"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:onClick=""
+        />
 
     <TextView
         android:id="@+id/tvUserName"
