--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,16 +5,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/miCompose"
-        app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_compose"
+        android:icon="@drawable/ic_chat_white_24dp"
         android:onClick="onOptionsItemSelected"
-        android:title="Compose">
-    </item>
+        android:title="Compose"
+        app:showAsAction="ifRoom"></item>
     <item
         android:id="@+id/miProfile"
-        app:showAsAction="ifRoom|withText"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/ic_person_white_24dp"
         android:onClick="onOptionsItemSelected"
-        android:title="Profile">
-    </item>
+        android:title="Profile"
+        app:showAsAction="ifRoom|withText"></item>
 </menu>
