--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -30,7 +30,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/btTweet" />
+        android:layout_below="@+id/btTweet"
+        android:autoLink="all"/>
 
     <TextView
         android:id="@+id/etCharCount"
