--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -30,6 +30,8 @@
         android:layout_below="@+id/tvUserName"
         android:layout_marginLeft="5dp"
         android:layout_toEndOf="@+id/ivProfileImage"
+        android:autoLink="all"
+        android:linksClickable="true"
         android:text="TextView" />
 
     <TextView
@@ -40,12 +42,64 @@
         android:layout_alignParentTop="true"
         android:text="TextView" />
 
-    <ImageView
-        android:id="@+id/btReply"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
         android:layout_below="@+id/ivProfileImage"
-        app:srcCompat="@drawable/ic_action_name" />
+        android:layout_alignParentStart="true">
+
+        <ImageView
+            android:id="@+id/btReply"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignTop="@+id/imageView3"
+            android:layout_margin="5dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0.16"
+            app:srcCompat="@drawable/ic_action_name" />
+
+        <ImageView
+            android:id="@+id/ivRetweet"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_below="@+id/ivProfileImage"
+            android:layout_margin="5dp"
+            android:layout_toEndOf="@+id/btReply"
+            android:layout_weight="0.05"
+            app:srcCompat="@drawable/ic_vector_retweet_stroke" />
+
+        <TextView
+            android:id="@+id/tvRTCount"
+            android:layout_width="18dp"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/imageView3"
+            android:layout_margin="10dp"
+            android:layout_toEndOf="@+id/imageView3"
+            android:text="5"
+            android:layout_weight="0.04" />
+
+        <ImageView
+            android:id="@+id/ivLike"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignBottom="@+id/tvRTCount"
+            android:layout_margin="5dp"
+            android:layout_toEndOf="@+id/tvRTCount"
+            app:srcCompat="@drawable/ic_vector_heart_stroke" />
+
+        <TextView
+            android:id="@+id/tvLikeCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/tvRTCount"
+            android:layout_margin="10dp"
+            android:layout_toEndOf="@+id/imageView5"
+            android:layout_weight="0.06"
+            android:text="5" />
+
+    </LinearLayout>
 
 </RelativeLayout>
